--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,24 @@
 {
   "name": "Tetris Móvil",
   "short_name": "Tetris",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#222222",
   "theme_color": "#ff6b6b",
+  "description": "Un clásico juego de Tetris para móviles",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
