--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,20 @@
 {
   "name": "Tetris Móvil",
   "short_name": "Tetris",
-  "start_url": "./index.html",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#222222",
   "theme_color": "#ff6b6b",
-  "description": "Un clásico juego de Tetris para móviles",
-  "orientation": "portrait",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
