--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,14 @@
 {
-  "name": "Tetris Móvil",
+  "name": "Tetris Offline Pro",
   "short_name": "Tetris",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#222222",
-  "theme_color": "#ff6b6b",
+  "theme_color": "#ff8800",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
       "type": "image/png"
     }
   ]
