--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,19 @@
 {
-  "name": "Tetris Offline Pro",
+  "name": "Tetris Móvil",
   "short_name": "Tetris",
-  "start_url": "./index.html",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#222222",
-  "theme_color": "#ff8800",
+  "theme_color": "#ff6b6b",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
